@@ -1,6 +1,6 @@
 Package: nlme
-Version: 3.1-19
-Date: 2001/10/31
+Version: 3.1-21
+Date: 2001/12/10
 Priority: recommended
 Title: Linear and nonlinear mixed effects models
 Author: Jose Pinheiro <jcp@research.bell-labs.com>,
